<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_card"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_rectangle"
                android:clipToOutline="true"
                android:src="@drawable/empty_user_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="roboto"
                    android:text="@string/base_user_name"
                    android:textColor="@color/dark_blue"
                    android:textFontWeight="600"
                    android:textSize="16sp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="roboto"
                    android:text="@string/base_telephone_number"
                    android:textColor="@color/gray"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    android:gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:id="@+id/flag"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/flag_us"
                            android:scaleType="centerCrop"/>

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/nat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="roboto"
                        android:text="@string/base_coded_nationality"
                        android:textColor="@color/gray"
                        android:textFontWeight="400"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/trash_can" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>