<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.generateuser.GenerateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.generateuser.GenerateFragment"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/left_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_label"
                style="@style/DarkBlueText"
                android:layout_weight="1"
                android:gravity="center"/>

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBlueText"
                android:text="@string/select_gender_label"
                android:layout_marginVertical="10dp"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/spinner_background"
                android:textSize="20sp"
                android:spinnerMode="dropdown"
                android:popupBackground="@drawable/dropdown_background"
                android:entries="@array/genders"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBlueText"
                android:text="@string/select_nationality_label"
                android:layout_marginVertical="10dp"/>

            <Spinner
                android:id="@+id/nationality_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/spinner_background"
                android:textSize="20sp"
                android:spinnerMode="dropdown"
                android:popupBackground="@drawable/dropdown_background"
                android:entries="@array/genders"
                android:layout_marginVertical="10dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_button_label"
            android:background="@drawable/generate_button_background"
            android:textColor="@color/white"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading_background"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dark_blue"/>

    </FrameLayout>

</FrameLayout>

<!--

<LinearLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.generateuser.GenerateFragment"
    android:padding="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_label"
            style="@style/DarkBlueText"
            android:layout_weight="1"
            android:gravity="center"/>

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DarkBlueText"
            android:text="@string/select_gender_label"
            android:layout_marginVertical="10dp"/>

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spinner_background"
            android:textSize="20sp"
            android:spinnerMode="dropdown"
            android:popupBackground="@drawable/dropdown_background"
            android:entries="@array/genders"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DarkBlueText"
            android:text="@string/select_nationality_label"
            android:layout_marginVertical="10dp"/>

        <Spinner
            android:id="@+id/nationality_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spinner_background"
            android:textSize="20sp"
            android:spinnerMode="dropdown"
            android:popupBackground="@drawable/dropdown_background"
            android:entries="@array/genders"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_button_label"
        android:background="@drawable/generate_button_background"
        android:textColor="@color/white"/>

</LinearLayout>

-->